--- a/404.html
+++ b/404.html
@@ -8,12 +8,12 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.hXVapWgF.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.DptUDX1a.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.D3g5O8Wg.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.C6aRPTDk.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.Bqgw9XGh.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.ChG23aL2.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.DySTPMbq.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.CZo4A-g6.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.NIG3mjLB.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.D6veqVYg.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.Gtf1Dow8.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.0XGkgD3B.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/disclose-version.BdKW9F2k.js">
@@ -22,7 +22,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_8nxsu0 = {
+					__sveltekit_tdyixm = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -30,8 +30,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.hXVapWgF.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.NIG3mjLB.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.D3g5O8Wg.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.D6veqVYg.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
