--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.DHoGNz44.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.DWEvQcds.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.CfoLKslz.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.BNQglUSu.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.zkHJIPv_.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.B1MExCkC.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.B5Ag9eUI.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.2u0utMPu.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/template.Bt2SUrO2.js">
@@ -25,7 +25,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1vmvshr = {
+					__sveltekit_fdyu0q = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.DHoGNz44.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.B5Ag9eUI.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.CfoLKslz.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.2u0utMPu.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
