--- a/helpcenter.html
+++ b/helpcenter.html
@@ -11,26 +11,25 @@
 		
 		<link href="./app/immutable/assets/0.rpl2eCSA.css" rel="stylesheet">
 		<link href="./app/immutable/assets/11.BoDWe5Zb.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.DHoGNz44.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.DWEvQcds.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.CfoLKslz.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.BNQglUSu.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.zkHJIPv_.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.B1MExCkC.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.B5Ag9eUI.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.2u0utMPu.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.Bt2SUrO2.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.VWAYMSbI.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.C9Xz4LI7.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.DrFL_0gW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/11.BZLRuR0u.js"><!--[--><meta name="description" content="About this app"><!--]--><title>About</title>
+		<link rel="modulepreload" href="./app/immutable/nodes/11.D4SvuoZY.js"><!--[--><meta name="description" content="About this app"><!--]--><title>About</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-1663mbs"><header class="svelte-1q4g7a0"><div class="corner svelte-1q4g7a0"><a href="./" class="svelte-1q4g7a0"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="logo" class="svelte-1q4g7a0"></a></div> <div class="corner svelte-1q4g7a0"><div class="w3-sidebar w3-bar-block w3-medium sidebar-auto svelte-1q4g7a0" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./contact/" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></div></header><!----> <main class="svelte-1663mbs"><!----><div class="top-area"><h1>Help Center</h1> <h4></h4> <br> <br></div>  <div class="text-column"><p>We're here to assist you every step of the way! 
-	Let's make your experience seamless!</p></div> <svg width="260" height="50"><rect id="box" x="0" y="0" width="100" height="20"></rect><text x="110" y="15" font-size="14" fill="white">FAQs</text></svg> <section><div class="text-column"><p>Your questions may be among the topics we are frequently asked about.
-			Check out the FAQs below to find out.</p> <div class="faq-container svelte-1bjvgtg"><h3>Frequently Asked Questions</h3> <details class="svelte-1bjvgtg"><summary class="svelte-1bjvgtg">Do you offer trading services?</summary> <div class="svelte-1bjvgtg">No. We are not an exchange and do not execute any trades.
+		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-1663mbs"><header class="svelte-1q4g7a0"><div class="corner svelte-1q4g7a0"><a href="./" class="svelte-1q4g7a0"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="logo" class="svelte-1q4g7a0"></a></div> <div class="corner svelte-1q4g7a0"><div class="w3-sidebar w3-bar-block w3-medium sidebar-auto svelte-1q4g7a0" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./contact/" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></div></header><!----> <main class="svelte-1663mbs"><!----><div class="top-area"><h1>Help Center</h1> <h4>We're here to assist you every step of the way! 
+		Let's make your experience seamless!</h4> <br> <br></div>  <svg width="260" height="50"><rect id="box" x="0" y="0" width="100" height="20"></rect><text x="110" y="15" font-size="14" fill="white">FAQs</text></svg> <section><div class="text-column"><h3>Frequently Asked Questions</h3> <p>Check out the FAQs below to find out if your questions are among the topics we are frequently asked about.</p> <div class="faq-container svelte-1bjvgtg"><details class="svelte-1bjvgtg"><summary class="svelte-1bjvgtg">Do you offer trading services?</summary> <div class="svelte-1bjvgtg">No. We are not an exchange and do not execute any trades.
 				Our focus is on delivering scientific solutions for investment analytics and 
 				actionable insights countering the asymmetries in financial markets. 
 				We empower investors and organizations with tools to make informed decisions 
@@ -57,7 +56,7 @@
 			
 			<script>
 				{
-					__sveltekit_1vmvshr = {
+					__sveltekit_fdyu0q = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -65,8 +64,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.DHoGNz44.js"),
-						import("./app/immutable/entry/app.B5Ag9eUI.js")
+						import("./app/immutable/entry/start.CfoLKslz.js"),
+						import("./app/immutable/entry/app.2u0utMPu.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 11],
