--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 		
 		<link href="./app/immutable/assets/0.rpl2eCSA.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.TBEW4dVh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.DHoGNz44.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.DWEvQcds.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.CfoLKslz.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.BNQglUSu.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.zkHJIPv_.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.B1MExCkC.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.B5Ag9eUI.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.2u0utMPu.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.Bt2SUrO2.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.VWAYMSbI.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.C9Xz4LI7.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.DrFL_0gW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/2.fxRbO4iR.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/2.IJ9vFlX-.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/hyperplane.BHphYtDW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/quantum-chip.CbPi-Wm6.js"><!--[--><meta name="description" content="Svelte demo app" class="svelte-1qkqmad"><!--]--><title>Home</title>
 	</head>
@@ -48,7 +48,7 @@
 			
 			<script>
 				{
-					__sveltekit_1vmvshr = {
+					__sveltekit_fdyu0q = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -56,8 +56,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.DHoGNz44.js"),
-						import("./app/immutable/entry/app.B5Ag9eUI.js")
+						import("./app/immutable/entry/start.CfoLKslz.js"),
+						import("./app/immutable/entry/app.2u0utMPu.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
