--- a/roadmap.html
+++ b/roadmap.html
@@ -10,18 +10,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.Bs90br9P.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.Ca_NRsCD.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.fITQh0F-.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.Cz3FW6-n.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.DIeFDiMJ.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.BfWd4mtR.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.KvoNggDI.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BKX7vD-p.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.2tBYhdrV.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.BsQ56n95.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.CUYlMRwB.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.BN9odI9D.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.COvB-EjU.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/17.BkRNxWVr.js">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_19fhna3 = {
+					__sveltekit_w90hf4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -39,8 +39,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.Ca_NRsCD.js"),
-						import("./app/immutable/entry/app.BKX7vD-p.js")
+						import("./app/immutable/entry/start.Cz3FW6-n.js"),
+						import("./app/immutable/entry/app.2tBYhdrV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 17],
