--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.Bs90br9P.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.CgQAGuGr.css" rel="stylesheet">
 		<link href="./app/immutable/assets/14.Cs9X4M7E.css" rel="stylesheet"><!--[--><meta name="description" content="About this app" class="svelte-348oy8"><!--]--><title>About</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
