--- a/algopilot.html
+++ b/algopilot.html
@@ -10,21 +10,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.CECDgNny.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.DwcUubLX.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.t6VdJdmf.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.vispOF2z.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.Dc2q3mKW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.wVlEl7lY.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.B9J0_DcG.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BmHSjpuv.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.DJKhoG-R.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.BsQ56n95.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.Bs99iBTv.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.BfGjuGIX.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.COvB-EjU.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/4.-mWVtG88.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/4.bbgbIc3Y.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/graphnetwork.PkMY6-Xw.js"><!--[--><meta name="description" content="test"><!--]--><title>Algopilot</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -37,7 +37,7 @@
 			
 			<script>
 				{
-					__sveltekit_10gajdg = {
+					__sveltekit_1di4703 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -45,8 +45,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.DwcUubLX.js"),
-						import("./app/immutable/entry/app.BmHSjpuv.js")
+						import("./app/immutable/entry/start.vispOF2z.js"),
+						import("./app/immutable/entry/app.DJKhoG-R.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
